--- a/DecompileLUA/DecompileLUA_VictorVran.ini
+++ b/DecompileLUA/DecompileLUA_VictorVran.ini
@@ -1,6 +1,6 @@
 [Settings]
-FirstRun=1
+FirstRun=0
 JavaPath=C:\Program Files\Java\bin\java.exe
 UnluacPath=unluac_2015_06_13.jar
 ;you can also specifiy a path to unluac
-;UnluacPath=E:\Games\Surviving Mars\HPK\unluac_2015_06_13.jar
+;UnluacPath=E:\Games\Victor Vran\HPK\unluac_2015_06_13.jar
