--- a/Decompile LUA/DecompileLUA.ini
+++ b/Decompile LUA/DecompileLUA.ini
@@ -1,5 +1,6 @@
 [Settings]
 FirstRun=1
+IgnoreWarning=0
 JavaPath=C:\Program Files\Java\bin\java.exe
 UnluacPath=unluac_2021_06_03.jar
 ;you can also specifiy a path to unluac
